<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Person"
            type="com.example.arguelles_exer4_slambook.Person"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/greeting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_margin"
            android:text="@string/greeting"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01999998" />

        <ScrollView
            android:id="@+id/info_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greeting_text_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/name_label_text" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/nickname_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/nickname_label_text" />

                <EditText
                    android:id="@+id/nickname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nickname_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/age_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/age_label_text" />

                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age_hint"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/bday_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/birthday_label_text" />

                <EditText
                    android:id="@+id/bday_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bday_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/phone_label_text" />

                <EditText
                    android:id="@+id/phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/course_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/course_label_text" />

                <EditText
                    android:id="@+id/course_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/course_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/color_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/course_label_text" />

                <EditText
                    android:id="@+id/color_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/color_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/dream_label_text" />

                <EditText
                    android:id="@+id/dream_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dream_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/crush_label_text" />

                <EditText
                    android:id="@+id/crush_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/crush_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/message_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/small_margin"
                    android:text="@string/message_label_text" />

                <EditText
                    android:id="@+id/message_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/done_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>